src/test/deca/context/valid/initField-allKind.deca
class A {
    int d;
    float b;
    boolean c;
    A a;
}

{
    A a = new A();
    println(a.d);
    println(a.b);
    if (a.c == false) {
        println("ok");
    }
    if (a.a == null) {
        println("ok");
    }
}
